--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 # trash folder
 /Корзина
 
+# nested projects (separate workspaces)
+/infographic-design
+
 # debug
 npm-debug.log*
 yarn-debug.log*
